<resources>
    <string name="app_name">SeniorProjectTutor</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_uo">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_main">Welcome to TutorApp! </string>
    <string name="instructions_acitivty_main">Email format is as follows: xxxxxx@farmingdale.edu OR xxxxxxx@farmingdale.edu\nPasswords must be at least 4 characters in length</string>
    <string name="first_name">Enter your first name...</string>
    <string name="last_name">Enter your last name...</string>
    <string name="email">Enter your email...</string>
    <string name="phone">Enter your phone number...</string>
    <string name="picture">Profile Picture</string>
    <string name="picture_submit">Upload Picture</string>
    <string name="submit">Submit</string>
    <string name="register">Please register or edit your account. All fields except profile picture are required</string>
    <string name="ramId">Enter your RAM ID</string>
    <string name="tutorRate">Please enter your rates for 30 and 60 minute sessions</string>
    <string name="student">Student</string>
    <string name="tutor">Tutor</string>
    <string name="password">Enter your password</string>
    <string name="rate30">Enter rate for 30 minute session...</string>
    <string name="rate60">Enter rate for 60 minute session...</string>
    <string name="menuAppointmentsView">Future Appointments</string>
    <string name="menuPastAppointmentsView">Past Appointments</string>
    <string name="appointmentstudent">Find a Tutor</string>
    <string name="appointmenttutor">Find a Student</string>
    <string name="viewappointments">View Appointments</string>
    <string name="viewavailability">View Availability</string>
    <string name="settings">Settings</string>
    <string name="possibleappointments">View Possible Appointments</string>
    <string name="add_availability">Add Availability</string>
    <string name="viewpastappointments">View Past Appointments</string>
    <string name="reviews">Reviews</string>
    <string name="course">Choose Course</string>
    <string name="search_button">Add Availability</string>
    <string name="student_availibility"></string>
    <string name="available_from_prompt">Select start time and length of appointment</string>
    <string name="end_time_prompt">End time:</string>
    <string name="availability_from">Available From:</string>
    <string name="availability_to">To:</string>
    <string name="timeThirtyMinute">30 Minutes</string>
    <string name="timeSixtyMinute">60 Minutes</string>
    <string name="date_button">Pick Date</string>
    <string name="review_prompt">Type your review below: Must contain less than 1000 characters</string>
    <string-array name="campus_buildings">
        <item>Alumni Hall</item>
        <item>Campus Center</item>
        <item>Conklin Hall</item>
        <item>Dewey Hall</item>
        <item>Gleeson Hall</item>
        <item>Greenley Library</item>
        <item>Hale Hall </item>
        <item>School of Business</item>
        <item>Health and Wellness Center</item>
        <item>Hooper Hall</item>
        <item>Horton Hall</item>
        <item>Knapp Hall</item>
        <item>Laffin Hall</item>
        <item>Lupton Hall</item>
        <item>Memorial Hall</item>
        <item>Nold Hall</item>
        <item>Orchard Hall</item>
        <item>Roosevelt Hall</item>
        <item>Sinclair Hall</item>
        <item>Thompson Hall</item>
        <item>Ward Hall</item>
        <item>Whitman Hall</item>
    </string-array>
    <string-array name="times_array">
        <item>0000</item>
        <item>0030</item>
        <item>0100</item>
        <item>0130</item>
        <item>0200</item>
        <item>0230</item>
        <item>0300</item>
        <item>0330</item>
        <item>0400</item>
        <item>0430</item>
        <item>0500</item>
        <item>0530</item>
        <item>0600</item>
        <item>0630</item>
        <item>0700</item>
        <item>0730</item>
        <item>0800</item>
        <item>0830</item>
        <item>0900</item>
        <item>0930</item>
        <item>1000</item>
        <item>1030</item>
        <item>1100</item>
        <item>1130</item>
        <item>1200</item>
        <item>1230</item>
        <item>1300</item>
        <item>1330</item>
        <item>1400</item>
        <item>1430</item>
        <item>1500</item>
        <item>1530</item>
        <item>1600</item>
        <item>1630</item>
        <item>1700</item>
        <item>1730</item>
        <item>1800</item>
        <item>1830</item>
        <item>1900</item>
        <item>1930</item>
        <item>2000</item>
        <item>2030</item>
        <item>2100</item>
        <item>2130</item>
        <item>2200</item>
        <item>2230</item>
        <item>2300</item>
        <item>2330</item>
    </string-array>
    <string-array name="times_array_visual">
        <item>12:00 AM</item>
        <item>12:30 AM</item>
        <item>1:00 AM</item>
        <item>1:30 AM</item>
        <item>2:00 AM</item>
        <item>2:30 AM</item>
        <item>3:00 AM</item>
        <item>3:30 AM</item>
        <item>4:00 AM</item>
        <item>4:30 AM</item>
        <item>5:00 AM</item>
        <item>5:30 AM</item>
        <item>6:00 AM</item>
        <item>6:30 AM</item>
        <item>7:00 AM</item>
        <item>7:30 AM</item>
        <item>8:00 AM</item>
        <item>8:30 AM</item>
        <item>9:00 AM</item>
        <item>9:30 AM</item>
        <item>10:00 AM</item>
        <item>10:30 AM</item>
        <item>11:00 AM</item>
        <item>11:30 AM</item>
        <item>12:00 PM</item>
        <item>12:30 PM</item>
        <item>1:00 PM</item>
        <item>1:30 PM</item>
        <item>2:00 PM</item>
        <item>2:30 PM</item>
        <item>3:00 PM</item>
        <item>3:30 PM</item>
        <item>4:00 PM</item>
        <item>4:30 PM</item>
        <item>5:00 PM</item>
        <item>0530 PM</item>
        <item>6:00 PM</item>
        <item>6:30 PM</item>
        <item>7:00 PM</item>
        <item>7:30 PM</item>
        <item>8:00 PM</item>
        <item>8:30 PM</item>
        <item>9:00 PM</item>
        <item>9:30 PM</item>
        <item>10:00 PM</item>
        <item>10:30 PM</item>
        <item>11:00 PM</item>
        <item>11:30 PM</item>
    </string-array>
    <string name="proceed">Continue</string>
    <string name="available">Check which days you are available and then input the times</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>