<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main__menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/darker_gray"
    tools:context="com.wtw.qws.seniorprojecttutor.Main_Menu">

    <!--txtTitle-->
    <TextView
        android:textColor="#003300"
        android:text="test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="100px"
        android:id="@+id/txtWelcome_MainMenu" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtWelcome_MainMenu"
        android:layout_centerHorizontal="true"
        android:id="@+id/scrollScrollView_MainMenu">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lytInnerRelativeLayout_MainMenu">

            <!--btnFind-->
            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/add_availability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:id="@+id/btnFindAppointments_MainMenu" />

            <!--btnMatchedAppointments-->
            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/possibleappointments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnFindAppointments_MainMenu"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:id="@+id/btnPossibleAppointments_MainMenu"
                />

            <!--btnAppointments-->
            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/viewappointments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:id="@+id/btnViewAppointments_MainMenu"
                android:layout_below="@+id/btnPossibleAppointments_MainMenu"
                android:layout_centerHorizontal="true" />

            <!--btnPastAppointments-->
            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/viewpastappointments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:id="@+id/btnViewPastAppointments_MainMenu"
                android:layout_below="@id/btnViewAppointments_MainMenu"
                android:layout_centerHorizontal="true"/>

            <!--btnAvailability-->
             <Button
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:text="@string/viewavailability"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
                 android:id="@+id/btnViewAvailability_MainMenu"
                 android:layout_below="@id/btnViewPastAppointments_MainMenu"
                 android:layout_centerHorizontal="true"/>


            <!--btnSettings-->
            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:id="@+id/btnSettings_MainMenu"
                android:layout_below="@id/btnViewAvailability_MainMenu"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
